k8s/postgres-deployment.yaml
# Note the apiVersion is apps/v1
apiVersion: apps/v1
#New config file of type Deployment
kind: Deployment    
metadata:
  name: postgres-deployment
spec:
  replicas: 1    # No. of distinct identical pods this deployment will create
  selector:      # Deployment's way of id-ing the pod's published label that belong to this deployment.
    matchLabels:
      component: postgres
  template:     # pod-template config for every pod in this deployment
    metadata:
      labels:   # pod's label that is published for the sake of selector of deployment above. 
        component: postgres
    spec:       # spec for postgres container in the pod which is in this deployment.
      volumes:  # Volume details for this postgres-pod
        - name: postgres-storage    # Name of the volume
          persistentVolumeClaim:    # Assgined PVC for this postgres-pod
              claimName: database-persistent-volume-claim   # name of Assgined PVC for this postgres-pod
      containers:         # list of containers that we want created with every pod controlled by this deployment.
      - name: postgres    # name of the container inside the pod
        image: postgres   # std image for postgres container inside pod.         
        ports:
          - containerPort: 5432   # Default port for postgres
        volumeMounts:     # How to use the storage(pvc) that is available above for this container.
          - name: postgres-storage    # ==> matches with the pvc volume name above
            mountPath: /var/lib/postgresql/data      # data dir where the postgres-storage is actually stored on the disk
            subPath: postgres         # the folder in which postgres stores all the data inside pvc
